trunk/Archive2/e0/5d2fa9481a9e60/output
main.cpp: In function 'void foo()':
main.cpp:2:9: error: 'fun' was not declared in this scope
     fun();
         ^
